# testing

./: app.py  fake_job_detection (1).ipynb  pyproject.toml  requirements.txt
Models/: evaluation_results.json  mlp_history.json  mlp_model.h5  model_comparison.csv  tabnet_history.json  transformer_history.json  transformer_model.h5
