[project]
name = "UAP_ML"
version = "0.1.0"
description = "Fake Job Posting Detection using Deep Learning & Transfer Learning"
authors = [
    {name = "narpo0207", email = "143424695+narpo0207@users.noreply.github.com"},
]
dependencies = [
    "streamlit>=1.37.0,<1.54.0",
    "tensorflow>=2.15.0,<2.17.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "joblib>=1.3.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "torch>=2.1.0,<3.0.0",
    "pytorch-tabnet>=4.1.0"
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
